syntax = "proto3";

package chat_protobuf;

option go_package="chat";

import "google/protobuf/timestamp.proto";

message Message {
    string send_id = 1;

    string text = 2;

    google.protobuf.Timestamp sent_at = 3;
}

message SendRequest {
    string sub_id = 1;

    Message message = 2;
}

message SendResponse {

}

message SubscribeRequest {
    string sub_id = 1;
}

message SubscribeResponse {
    Message message = 1;
}

service ChatService {
    rpc Send (SendRequest) returns (SendResponse) { }

    rpc Subscribe (SubscribeRequest) returns (stream SubscribeResponse) { }
}